--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "through": "^2.3.8"
   },
   "scripts": {
-    "dev": "npm run generate-imported-components && parcel app/index.html",
-    "dev:server": "nodemon -e js,jsx,html --ignore dist --ignore app/imported.js --exec 'npm run build && npm run start'",
+    "dev": "yarn generate-imported-components && parcel app/index.html",
+    "dev:server": "nodemon -e js,jsx,html --ignore dist/ --ignore app/imported.js --exec 'yarn build && yarn start'",
 
-    "build": "rimraf dist && npm run generate-imported-components && npm run create-bundles",
+    "build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
     "start": "node dist/server",
 
-    "create-bundles": "concurrently \"npm run create-bundle:client\" \"npm run create-bundle:server\"",
+    "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
     "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
     "create-bundle:server": "cross-env BABEL_ENV=server parcel build server/index.js -d dist/server --public-url /dist --target=node",
     "generate-imported-components": "imported-components app app/imported.js"
