--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
     "@babel/polyfill": "^7.6.0",
     "babel-plugin-macros": "^2.6.1",
     "cheerio": "^1.0.0-rc.3",
@@ -30,10 +31,8 @@
   "scripts": {
     "dev": "yarn generate-imported-components && parcel app/index.html",
     "dev:server": "nodemon -e js,jsx,html --ignore dist/ --ignore app/imported.js --exec 'yarn build && yarn start'",
-
     "build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
     "start": "node dist/server",
-
     "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
     "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
     "create-bundle:server": "cross-env BABEL_ENV=server parcel build server/index.js -d dist/server --public-url /dist --target=node",
