--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
-  "plugins": ["react-imported-component/babel", "babel-plugin-dynamic-import-node"],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-class-properties",
+    "react-imported-component/babel",
+    "babel-plugin-dynamic-import-node"
+  ],
   "env": {
     "server": {
       "plugins": ["react-imported-component/babel", "babel-plugin-dynamic-import-node"]
@@ -7,6 +17,30 @@
     "client": {
       "plugins": [
         ["react-imported-component/babel"]
+      ]
+    },
+    "test": {
+      "plugins": [
+        [
+          "@babel/plugin-proposal-decorators",
+          {
+            "legacy": true
+          }
+        ],
+        "@babel/plugin-proposal-class-properties"
+      ],
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "debug": false,
+            "targets": {
+              "browsers": [
+                "last 3 versions"
+              ]
+            }
+          }
+        ]
       ]
     }
   }
