Remove loading state (defer to a loading component if required)

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "scripts": {
     "dev": "yarn generate-imported-components && parcel app/index.html",
-    "dev:server": "nodemon -e js,jsx,html --ignore dist/ --ignore app/imported.js --exec 'yarn build && yarn start'",
+    "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/imported.js --exec 'yarn build && yarn start'",
     "build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
     "start": "node dist/server",
     "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
