--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,15 @@
 {
   "plugins": [
+    "react-imported-component/babel",
     [
       "@babel/plugin-proposal-decorators",
       {
         "legacy": true
       }
     ],
-    "@babel/plugin-proposal-class-properties",
-    "react-imported-component/babel",
-    "babel-plugin-dynamic-import-node"
+    "@babel/plugin-proposal-class-properties"
   ],
   "env": {
-    "server": {
-      "plugins": ["react-imported-component/babel", "babel-plugin-dynamic-import-node"]
-    },
-    "client": {
-      "plugins": [
-        ["react-imported-component/babel"]
-      ]
-    },
     "test": {
       "plugins": [
         [
