--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
     "babel-plugin-macros": "^2.6.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.0",
@@ -66,9 +67,5 @@
     "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
     "create-bundle:server": "cross-env BABEL_ENV=server parcel build server/index.js -d dist/server --public-url /dist --target=node",
     "generate-imported-components": "imported-components app app/imported.js"
-  },
-  "alias": {
-    "app": "./app",
-    "components": "./app/components"
   }
 }
