--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "styled-components": "^4.3.2",
     "typesafe-actions": "^4.4.2",
