--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "is-promise": "^2.1.0",
     "lodash": "^4.17.15",
     "object-path-immutable": "^3.0.2",
-    "react": ">=15",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.3",
     "react-imported-component": "^6.1.0",
