Move whatChanged -> components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "paths": {
-      "@app": ["./app"],
-      "@components": ["./app/components"]
+      "app": ["./app"],
+      "components": ["./components"]
     }
   },
   "include": [
