--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,8 @@
     ["module-resolver", {
       "root": ["./"],
       "alias": {
-        "@app": "./app",
-        "@components": "./app/components"
+        "app": "./app",
+        "components": "./components"
       }
     }],
     "react-imported-component/babel",
