--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
   },
   "scripts": {
     "dev": "yarn generate-imported-components && parcel app/index.html",
-    "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/imported.js --exec 'yarn build && yarn start'",
+    "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn build && yarn start'",
     "build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
     "start": "node dist/server",
     "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
     "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
     "create-bundle:server": "cross-env BABEL_ENV=server parcel build server/index.js -d dist/server --public-url /dist --target=node",
-    "generate-imported-components": "imported-components app app/imported.js",
+    "generate-imported-components": "imported-components app app/.imported.js",
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
     "lint:jsonly": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js",
