--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.0.1",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
+    "simple-deep-freeze": "^0.0.2",
     "styled-components": "^4.3.2",
     "typesafe-actions": "^4.4.2",
     "typescript": "^3.6.3",
