Setup typescript and listing as part of build + refactor react in view props

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,10 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "paths": {
-      "app": ["./app"],
-      "components": ["./components"]
+      "react-in-viewport": ["./@types/react-in-viewport"],
+      "simple-deep-freeze": ["/@types/simple-deep-freeze"],
+      "app": ["./app/*"],
+      "components": ["./components/*"]
     }
   },
   "include": [
