--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "scripts": {
     "dev": "yarn generate-imported-components && parcel app/index.html",
     "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn build && yarn start'",
-    "build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
+    "build": "rimraf dist && yarn lint && yarn type-check && yarn generate-imported-components && yarn create-bundles",
     "start": "node dist/server",
     "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
     "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
@@ -84,6 +84,7 @@
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
     "lint:jsonly": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js",
-    "lint": "yarn lint:css && yarn lint:js"
+    "lint": "yarn lint:css && yarn lint:js",
+    "type-check": "tsc --noEmit --skipLibCheck"
   }
 }
