--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
     "react-hot-loader/babel",
+    "macros",
     "babel-plugin-styled-components",
     ["module-resolver", {
       "root": ["./"],
