--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "llog": "^0.2.0",
     "nodemon": "^1.19.2",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pino": "^5.13.3",
     "react-hot-loader": "^4.12.13",
     "rimraf": "^3.0.0",
