--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "dev": "yarn generate-imported-components && parcel app/index.html",
     "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn dev:build && yarn start'",
     "dev:build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
-    "build": "rimraf dist && yarn lint && yarn type-check && yarn coverage && yarn generate-imported-components && yarn create-bundles",
+    "build": "rimraf {dist,reports} && yarn lint && yarn type-check && yarn coverage && yarn generate-imported-components && yarn create-bundles",
     "start": "node dist/server",
     "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
     "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
