--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "object-path-immutable": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.3",
     "react-imported-component": "^6.1.0",
