--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "enzyme-to-json": "^3.4.0",
     "eslint": "^6.4.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "express": "^4.17.1",
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
