--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.3",
     "react-imported-component": "^6.1.0",
-    "react-in-viewport": "^1.0.0-alpha.9",
+    "react-on-screen": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
