POC react-responsive-ui components

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "object-path-immutable": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-helmet-async": "^1.0.3",
     "react-imported-component": "^6.1.0",
     "react-on-screen": "^2.1.1",
     "react-redux": "^7.1.1",
+    "react-responsive-ui": "^0.14.178",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-toastify": "^5.4.0",
@@ -48,6 +48,7 @@
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
+    "autoprefixer": "^9.6.4",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
@@ -68,6 +69,7 @@
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pino": "^5.13.3",
+    "postcss-modules": "^1.4.1",
     "react-hot-loader": "^4.12.13",
     "rimraf": "^3.0.0",
     "stylelint": "^11.0.0",
