--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "app": "^0.1.0",
     "components": "^0.1.0",
+    "css-element-queries": "^1.2.1",
     "flux-standard-action": "^2.1.1",
     "immutable": "^4.0.0-rc.12",
     "is-promise": "^2.1.0",
