--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-ui": "^0.14.178",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.8",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "simple-deep-freeze": "^0.0.2",
