--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "app/index.html",
   "private": true,
   "dependencies": {
+    "@types/react-select": "^3.0.5",
     "app": "^0.1.0",
+    "body-parser": "^1.19.0",
     "components": "^0.1.0",
     "css-element-queries": "^1.2.1",
     "flux-standard-action": "^2.1.1",
