--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-element-queries": "^1.2.1",
     "flux-standard-action": "^2.1.1",
     "formik": "^2.0.1",
+    "helmet": "^3.21.2",
     "immutable": "^4.0.0-rc.12",
     "is-promise": "^2.1.0",
     "lodash": "^4.17.15",
