--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "declaration": false,
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "esNext",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
