Tidy babelrc config

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "react-imported-component/babel", "babel-plugin-dynamic-import-node",
+    "react-imported-component/babel",
+    "babel-plugin-dynamic-import-node",
     "react-hot-loader/babel",
     "macros",
     "babel-plugin-styled-components",
