--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "@hot-loader/react-dom": "^16.9.0",
     "@types/enzyme": "^3.10.3",
     "@types/is-promise": "^2.1.0",
@@ -60,12 +62,14 @@
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "autoprefixer": "^9.6.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.0",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
@@ -73,6 +77,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.1.2",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "llog": "^0.2.0",
@@ -83,14 +88,21 @@
     "postcss-modules": "^1.4.1",
     "react-hot-loader": "^4.12.13",
     "rimraf": "^3.0.0",
+    "style-loader": "^1.0.0",
     "stylelint": "^11.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.8.0",
     "through": "^2.3.8",
-    "ts-jest": "^24.1.0"
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
+    "wp-start": "webpack-dev-server --config ./app/webpack/client.config.js --progress --mode development",
+    "wp-build": "webpack --config ./app/webpack/client.config.js",
     "dev": "yarn generate-imported-components && parcel app/index.html",
     "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn dev:build && yarn start'",
     "dev:build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
