--- a/package.json
+++ b/package.json
@@ -81,12 +81,14 @@
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "llog": "^0.2.0",
+    "memory-fs": "^0.5.0",
     "nodemon": "^1.19.2",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pino": "^5.13.3",
     "postcss-modules": "^1.4.1",
     "react-hot-loader": "^4.12.13",
+    "require-from-string": "^2.0.2",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.0.0",
@@ -108,9 +110,8 @@
     "wp-build:server": "cross-env NODE_ENV=development webpack --config ./app/webpack/server.config.js --progress --mode development",
     "wp-build": "concurrently \"yarn wp-build:client\" \"yarn wp-build:server\"",
     "wp-dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn wp-build && yarn wp-start'",
-    "wp-start": "node dist/server/main.js",
-
-
+    "wp-start": "node server/main.js",
+    "ssr": "NODE_ENV=production node ./server.js",
     "dev": "yarn generate-imported-components && parcel app/index.html",
     "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn dev:build && yarn start'",
     "dev:build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
