--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@types/classnames": "^2.2.9",
     "@types/react-select": "^3.0.5",
-    "app": "^0.1.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "css-element-queries": "^1.2.1",
@@ -64,6 +63,7 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "babel-polyfill": "^6.26.0",
     "cheerio": "^1.0.0-rc.3",
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.0",
@@ -105,10 +105,11 @@
   "scripts": {
     "wp-start:dev": "cross-env NODE_ENV=development webpack-dev-server --config ./app/webpack/client.config.js --progress --mode development",
     "wp-build:client": "cross-env NODE_ENV=development webpack --config ./app/webpack/client.config.js --progress --mode development",
-    "wp-build:server": "cross-env NODE_ENV=development webpack --config ./app/webpack/server.config.js --progress --mode development",
+    "wp-build:server": "cross-env NODE_ENV=development webpack --config ./app/webpack/server.config.js --progress",
     "wp-build": "concurrently \"yarn wp-build:client\" \"yarn wp-build:server\"",
     "wp-dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn wp-build && yarn wp-start'",
-    "wp-start": "node server/main.js",
+    "wp-start": "node dist/server/main.js",
+    "run-dev-ssr": "webpack --config webpack.config.js --watch --mode=development & babel src -d dist --watch & browser-refresh dist/server.js",
     "ssr": "NODE_ENV=production node ./server.js",
     "dev": "yarn generate-imported-components && parcel app/index.html",
     "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn dev:build && yarn start'",
