Update webpack config + scripts

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "jest-junit": "^8.0.0",
     "llog": "^0.2.0",
     "memory-fs": "^0.5.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.2",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
@@ -103,23 +104,15 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "wp-start:dev": "cross-env NODE_ENV=development webpack-dev-server --config ./app/webpack/client.config.js --progress --mode development",
-    "wp-build:client": "cross-env NODE_ENV=production webpack --config ./app/webpack/client.config.js",
-    "wp-build:server": "cross-env NODE_ENV=production webpack --config ./app/webpack/server.config.js",
-    "wp-build": "concurrently \"yarn wp-build:client\" \"yarn wp-build:server\"",
-    "wp-dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn wp-build && yarn wp-start'",
-    "wp-start": "node dist/server/main.js",
-    "run-dev-ssr": "webpack --config webpack.config.js --watch --mode=development & babel src -d dist --watch & browser-refresh dist/server.js",
-    "ssr": "NODE_ENV=production node ./server.js",
-    "dev": "yarn generate-imported-components && parcel app/index.html",
-    "dev:server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn dev:build && yarn start'",
-    "dev:build": "rimraf dist && yarn generate-imported-components && yarn create-bundles",
-    "build": "rimraf {dist,reports} && yarn lint && yarn type-check && yarn coverage && yarn generate-imported-components && yarn create-bundles",
-    "start": "node dist/server",
-    "create-bundles": "concurrently \"yarn create-bundle:client\" \"yarn create-bundle:server\"",
-    "create-bundle:client": "cross-env BABEL_ENV=client parcel build app/index.html -d dist/client --public-url /dist/client",
-    "create-bundle:server": "cross-env BABEL_ENV=server parcel build server/index.js -d dist/server --public-url /dist --target=node",
-    "generate-imported-components": "imported-components app app/.imported.js",
+    "client": "cross-env NODE_ENV=development webpack-dev-server --config ./app/webpack/client.config.js --progress --mode development",
+    "server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn build && yarn server:run'",
+    "server:run": "node dist/server/main.js",
+    "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build",
+
+    "build:client": "cross-env NODE_ENV=production webpack --config ./app/webpack/client.config.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config ./app/webpack/server.config.js",
+    "build": "rimraf dist && concurrently \"yarn build:client\" \"yarn build:server\"",
+
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
     "lint:jsonly": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js",
