--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-polyfill": "^6.26.0",
+    "brotli-webpack-plugin": "^1.1.0",
     "cheerio": "^1.0.0-rc.3",
+    "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.0",
     "css-loader": "^3.2.0",
@@ -75,6 +77,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.1.2",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
@@ -108,11 +111,9 @@
     "server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn build && yarn server:run'",
     "server:run": "node dist/server/main.js",
     "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build",
-
     "build:client": "cross-env NODE_ENV=production webpack --config ./app/webpack/client.config.js",
     "build:server": "cross-env NODE_ENV=production webpack --config ./app/webpack/server.config.js",
     "build": "rimraf dist && concurrently \"yarn build:client\" \"yarn build:server\"",
-
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
     "lint:jsonly": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js",
