--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pino": "^5.13.3",
     "postcss-modules": "^1.4.1",
+    "raw-loader": "^3.1.0",
     "react-hot-loader": "^4.12.13",
     "require-from-string": "^2.0.2",
     "rimraf": "^3.0.0",
