--- a/package.json
+++ b/package.json
@@ -109,11 +109,11 @@
   },
   "scripts": {
     "client": "cross-env NODE_ENV=development webpack-dev-server --config ./app/webpack/client.config.js --progress --mode development",
-    "server": "nodemon -e js,jsx,html,ts,tsx --ignore dist/ --ignore app/.imported.js --exec 'yarn build && yarn server:run'",
+    "server": "cross-env NODE_ENV=production nodemon -e js,jsx,html,ts,tsx,css,scss --ignore dist/ --ignore reports/ --exec 'yarn build && yarn server:run'",
     "server:run": "node dist/server/main.js",
     "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build",
-    "build:client": "cross-env NODE_ENV=production webpack --config ./app/webpack/client.config.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config ./app/webpack/server.config.js",
+    "build:client": "webpack --config ./app/webpack/client.config.js",
+    "build:server": "webpack --config ./app/webpack/server.config.js",
     "build": "rimraf dist && concurrently \"yarn build:client\" \"yarn build:server\"",
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
