--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
+    "@loadable/babel-plugin",
     "react-hot-loader/babel",
     "babel-plugin-styled-components",
     ["module-resolver", {
