--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "css-element-queries": "^1.2.1",
+    "express-trailing-slash": "^1.0.0",
     "flux-standard-action": "^2.1.1",
     "formik": "^2.0.1",
     "helmet": "^3.21.2",
