--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "@loadable/component": "^5.10.3",
     "@loadable/server": "^5.10.3",
-    "@types/classnames": "^2.2.9",
-    "@types/react-select": "^3.0.5",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "css-element-queries": "^1.2.1",
@@ -50,14 +48,17 @@
     "@hot-loader/react-dom": "^16.9.0",
     "@loadable/babel-plugin": "^5.10.3",
     "@loadable/webpack-plugin": "^5.7.1",
+    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
     "@types/is-promise": "^2.1.0",
     "@types/jest": "^24.0.18",
+    "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.138",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-select": "^3.0.5",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
     "@types/yup": "^0.26.24",
