--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
+    ["emotion", {
+      "inline": true,
+      "sourceMap": true
+    }],
     "@loadable/babel-plugin",
     "react-hot-loader/babel",
     "babel-plugin-styled-components",
