--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "app/index.html",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "@loadable/component": "^5.10.3",
     "@loadable/server": "^5.10.3",
     "body-parser": "^1.19.0",
@@ -30,7 +32,6 @@
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "simple-deep-freeze": "^0.0.2",
-    "styled-components": "^4.3.2",
     "stylis": "^3.5.4",
     "typesafe-actions": "^4.4.2",
     "typescript": "^3.6.3",
@@ -66,11 +67,13 @@
     "@typescript-eslint/parser": "^2.3.1",
     "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.23",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-polyfill": "^6.26.0",
     "brotli-webpack-plugin": "^1.1.0",
+    "browser-refresh": "^1.7.3",
     "cheerio": "^1.0.0-rc.3",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.2",
@@ -84,6 +87,7 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.5",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
