Configure babel to process typescript

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.2",
     "@hot-loader/react-dom": "^16.9.0",
     "@loadable/babel-plugin": "^5.10.3",
     "@loadable/webpack-plugin": "^5.7.1",
@@ -110,7 +111,6 @@
     "stylelint-processor-styled-components": "^1.8.0",
     "through": "^2.3.8",
     "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
