--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": ["@babel/preset-typescript", "@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     ["emotion", {
       "inline": true,
