--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "through": "^2.3.8",
     "ts-jest": "^24.1.0",
     "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-node-externals": "^1.7.2"
