--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/preset-typescript", "@babel/preset-env", "@babel/preset-react"],
+  "presets": ["@babel/preset-typescript", ["@babel/preset-env", {"modules":  false}], "@babel/preset-react"],
   "plugins": [
     ["emotion", {
       "inline": true,
@@ -20,7 +20,8 @@
         "legacy": true
       }
     ],
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "lodash"
   ],
   "env": {
     "test": {
