--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.23",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-polyfill": "^6.26.0",
