--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immutable": "^4.0.0-rc.12",
     "is-promise": "^2.1.0",
     "lodash": "^4.17.15",
+    "marked": "^0.7.0",
     "object-path-immutable": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -31,6 +32,7 @@
     "react-select": "^3.0.8",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
+    "sanitize-html": "^1.20.1",
     "simple-deep-freeze": "^0.0.2",
     "stylis": "^3.5.4",
     "typesafe-actions": "^4.4.2",
@@ -56,11 +58,13 @@
     "@types/jest": "^24.0.18",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.138",
+    "@types/marked": "^0.7.1",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.5",
+    "@types/sanitize-html": "^1.20.2",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
     "@types/yup": "^0.26.24",
