--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "express-trailing-slash": "^1.0.0",
     "flux-standard-action": "^2.1.1",
     "formik": "^2.0.1",
+    "he": "^1.2.0",
     "helmet": "^3.21.2",
     "immutable": "^4.0.0-rc.12",
     "is-promise": "^2.1.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
     "object-path-immutable": "^3.0.2",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -54,11 +56,13 @@
     "@loadable/webpack-plugin": "^5.7.1",
     "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
+    "@types/he": "^1.1.0",
     "@types/is-promise": "^2.1.0",
     "@types/jest": "^24.0.18",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.138",
     "@types/marked": "^0.7.1",
+    "@types/prismjs": "^1.16.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
