--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.5",
+    "file-loader": "^4.2.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
@@ -103,6 +104,7 @@
     "llog": "^0.2.0",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.2",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
@@ -112,6 +114,7 @@
     "react-hot-loader": "^4.12.13",
     "require-from-string": "^2.0.2",
     "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.0.0",
     "stylelint": "^11.0.0",
