--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,22 @@
 {
-  "presets": ["@babel/preset-typescript", ["@babel/preset-env", {"modules":  false}], "@babel/preset-react"],
+  "presets": [
+    "@babel/preset-typescript",
+    [
+      "@babel/preset-env",
+      {
+        "modules":  false,
+        "useBuiltIns": "usage",
+        "targets": {
+          "chrome": "78"
+        },
+        "corejs": {
+          "version": 3,
+          "proposals": true
+        }
+      }
+    ],
+    "@babel/preset-react"
+  ],
   "plugins": [
     ["emotion", {
       "inline": true,
