--- a/package.json
+++ b/package.json
@@ -130,8 +130,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "client": "cross-env NODE_ENV=development cross-env OPTIMISE=false webpack-dev-server --config ./app/webpack/client.config.js --progress",
-    "server": "cross-env NODE_ENV=development cross-env OPTIMISE=false nodemon -e js,jsx,html,ts,tsx,css,scss,md --ignore dist/ --ignore reports/ --exec 'yarn build && yarn server:run'",
+    "client": "cross-env NODE_ENV=development cross-env TARGET=development webpack-dev-server --config ./app/webpack/client.config.js --progress",
+    "server": "cross-env NODE_ENV=development cross-env TARGET=production nodemon -e js,jsx,html,ts,tsx,css,scss,md --ignore dist/ --ignore reports/ --exec 'yarn build && yarn server:run'",
     "server:run": "node dist/server/main.js",
     "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build",
     "prod:run": "yarn prod && yarn server:run",
