--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "file-loader": "^4.2.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
+    "ignore-loader": "^0.1.2",
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "llog": "^0.2.0",
