--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "express-static-gzip": "^2.0.5",
     "file-loader": "^4.2.0",
     "hard-source-webpack-plugin": "^0.13.1",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
     "jest": "^24.9.0",
@@ -132,7 +133,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "hot": "cross-env NODE_ENV=development cross-env TARGET=development babel-node --presets @babel/env app/webpack/index.js",
+    "hot": "cross-env NODE_ENV=development cross-env TARGET=server babel-node --presets @babel/env app/webpack/index.js",
     "client": "cross-env NODE_ENV=development cross-env TARGET=development webpack-dev-server --config ./app/webpack/client.config.js --progress",
     "server": "cross-env NODE_ENV=development cross-env TARGET=production nodemon -e js,jsx,html,ts,tsx,css,scss,md --ignore dist/ --ignore reports/ --exec 'yarn build && yarn server:run'",
     "server:run": "node dist/server/main.js",
