Make publicPath optional + cleanup

--- a/package.json
+++ b/package.json
@@ -132,13 +132,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "client": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env NODE_ENV=development cross-env webpack-dev-server --config ./app/webpack/client.config.js --progress",
-    "server": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env NODE_ENV=development cross-env babel-node --presets @babel/env app/webpack/index.js",
-    "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build",
+    "client": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env cross-env NODE_ENV=development cross-env webpack-dev-server --config ./app/webpack/client.config.js --progress",
+    "server": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env SSR_PORT=12345 cross-env NODE_ENV=development cross-env babel-node --presets @babel/env app/webpack/index.js",
+    "prod": "rimraf reports && yarn build",
     "prod:run": "yarn prod && yarn server:run",
-    "server:run": "cross-env PUBLIC_PATH=https://0.0.0.0:12345/ node dist/server/server.js",
-    "build:client": "cross-env PUBLIC_PATH=https://0.0.0.0:12345/ webpack --config ./app/webpack/client.config.js",
-    "build:server": "cross-env PUBLIC_PATH=https://0.0.0.0:12345/ webpack --config ./app/webpack/server.config.js",
+    "server:run": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env SSR_PORT=12345 node dist/server/server.js",
+    "build:client": "webpack --config ./app/webpack/client.config.js",
+    "build:server": "webpack --config ./app/webpack/server.config.js",
     "build": "rimraf dist && concurrently \"yarn build:client\" \"yarn build:server\"",
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
