Package production bundle

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
+    "archiver": "^3.1.1",
     "autoprefixer": "^9.6.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.23",
@@ -133,12 +134,15 @@
   "scripts": {
     "client": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env cross-env NODE_ENV=development cross-env webpack-dev-server --config ./app/webpack/client.config.js --progress",
     "server": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env SSR_PORT=12345 cross-env NODE_ENV=development cross-env babel-node --presets @babel/env app/webpack/index.js",
-    "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build",
+    "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build && yarn package",
     "prod:run": "yarn prod && yarn server:run",
     "server:run": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env SSR_PORT=12345 node dist/server/server.js",
+    "prebundle:run": "yarn install --production",
+    "bundle:run": "yarn server:run",
     "build:client": "webpack --config ./app/webpack/client.config.js",
     "build:server": "webpack --config ./app/webpack/server.config.js",
     "build": "rimraf dist && concurrently \"yarn build:client\" \"yarn build:server\"",
+    "package": "node etc/scripts/package.js",
     "lint:css": "stylelint './app/**/*.(js|jsx|ts|tsx)'",
     "lint:js": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js,.ts,.tsx",
     "lint:jsonly": "./node_modules/eslint/bin/eslint.js ./ --fix --ext .jsx,.js",
