Tidy up server port

--- a/package.json
+++ b/package.json
@@ -135,10 +135,9 @@
     "client": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env cross-env NODE_ENV=development cross-env webpack-dev-server --config ./app/webpack/client.config.js --progress",
     "server": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env SSR_PORT=12345 cross-env NODE_ENV=development cross-env babel-node --presets @babel/env app/webpack/index.js",
     "prod": "rimraf reports && yarn lint && yarn type-check && yarn coverage && yarn build && yarn package",
-    "prod:run": "yarn prod && yarn server:run",
-    "server:run": "cross-env PUBLIC_PATH=https://0.0.0.0:1234/ cross-env SSR_PORT=12345 node dist/server/server.js",
+    "prod:run": "cross-env PUBLIC_PATH=https://0.0.0.0:12345/ yarn prod && node dist/server/server.js",
     "prebundle:run": "yarn install --production",
-    "bundle:run": "yarn server:run",
+    "bundle:run": "cross-env PUBLIC_PATH=https://0.0.0.0:12345/ node dist/server/server.js",
     "build:client": "webpack --config ./app/webpack/client.config.js",
     "build:server": "webpack --config ./app/webpack/server.config.js",
     "build": "rimraf dist && concurrently \"yarn build:client\" \"yarn build:server\"",
