--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/sanitize-html": "^1.20.2",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
+    "@types/webpack": "^4.41.0",
     "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
