Specify node version

--- a/package.json
+++ b/package.json
@@ -153,5 +153,9 @@
   },
   "alias": {
     "react-dom": "@hot-loader/react-dom"
-  }
+  },
+  "engines": {
+    "node" : ">=10"
+  },
+  "engineStrict" : true
 }
